# mlops_lab2

./: .gitignore  README.md  lab_report.md  pyproject.toml
configs/: config_1batch.yaml  config_2batches.yaml  config_3batches.yaml  config_full.yaml
results/: results_config_1batch.json  results_config_2batches.json  results_config_3batches.json  results_config_full.json
src/: train.py
src/data/: dataset.py
src/models/: cnn.py
src/utils/: logger.py
